@@ -5,54 +5,11 @@ by battleskorpion
 <b>IMPORTANT:</b> Use the batch file to run the hoi4utils.HOIIVUtils.jar, as the jar file tends to immediately close.
 <br> Currently you need Java Runtime Environment (JRE) 17 or greater. Java SDK/JDK also should work.
 
-<br> hoi4 mod: North America Divided - <hyperlink> https://discord.gg/AyJY59BcbM </hyperlink> 
+<br> hoi4 mod: North America Divided - <hyperlink> https://discord.gg/AyJY59BcbM </hyperlink>
 
 <b>I  strongly recommend</b>  using git/Github to back up your mod. I assume no responsibility if
-this application corrupts/breaks or inadvertently or incorrectly alters any personal files or other, or 
-causes any other issues. It <i>should</i> not, but of course, the program is complicated, and by using this 
-application, you acknowledge that you understand the risks of use, <i> especially if your mod files are not
-backed up in some form.</i>
+this application corrupts/breaks or inadvertently or incorrectly alters any personal files or other, or
+causes any other issues. It <i>should</i> not, but of course, the program is complicated, and by using this
+application, you acknowledge that you understand the risks of use, <i> especially if your mod files are not sbacked up in some form.</i>
 
-Some features are WIP, and may not work as intended. 
-
-<b>DEV NOTES</b>
-
-command to run the jar>
-java --module-path "lib\javafx-sdk-20.0.2\lib" --add-modules javafx.controls,javafx.fxml -jar out\artifacts\HOIIVUtils.jar
-or use the bat
-
-Lowercase = hoi4
-Capitlize = HOIIV
-
-todo:
-	Make a drop down for themes (white mode, dark mode, and system default)
-	
-	Add multiple file paths with a plus and minus button
-
-	check theres a parent dir called mod for the mod dir selected.
-		
-
-Useful links:
-	Idea Download:
-https://www.jetbrains.com/idea/download/
-
-	Vscode Download:
-https://code.visualstudio.com/download
-
-	Java LTS jdk-17:
-https://adoptium.net/
-
-	JavaFX Introduction and Setup:
-https://openjfx.io/openjfx-docs/#introduction
-
-	JavaFX Library Files download:
-https://gluonhq.com/products/javafx/
-
-	JavaFX .fxml file GUI Scene Builder:
-https://gluonhq.com/products/scene-builder/#download
-
-	Vscode path variables:
-https://code.visualstudio.com/docs/editor/variables-reference
-
-	IntelliJ path variables:
-https://www.jetbrains.com/help/idea/absolute-path-variables.html
+Some features are WIP, and may not work as intended.s
